Task - Show Followers on "My cases"Multicustomers

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ dhHelpdeskMobile/.vs/
 /ExtendedCase/ExtendedCase.Database/ExtendedCase.Database.dbmdl
 /dhHelpdeskNG/UpgradeLog2.htm
 /dhHelpdeskNG/DH.Helpdesk.WebApi/Properties/PublishProfiles/FolderProfile1.pubxml
+dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
