--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -509,6 +509,7 @@
     <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentTextConditionIdentifierRepository.cs" />
     <Compile Include="Repositories\CaseSolutionCategoryLanguageRepository.cs" />
     <Compile Include="Repositories\CaseSolutionLanguageRepository.cs" />
+    <Compile Include="Repositories\Cases\Concrete\CaseConcreteRepository.cs" />
     <Compile Include="Repositories\Cases\Concrete\ExtendedCaseReportRepository.cs" />
     <Compile Include="Repositories\Computers\Concrete\ComputerStatusRepository.cs" />
     <Compile Include="Repositories\Computers\Concrete\ComputerTabsSettingsRepository.cs" />
