--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/packages.config
@@ -3,6 +3,11 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="Microsoft.Exchange.WebServices" version="2.2" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.9.0" targetFramework="net472" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="wnvhtmlconvert" version="15.0.0" targetFramework="net472" />
 </packages>
