--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -350,6 +350,7 @@
     <Compile Include="Infrastructure\TimeZoneResolver\TimeZoneResolver.cs" />
     <Compile Include="Response\Questionnaire\OptionNote.cs" />
     <Compile Include="Services\Authentication\FederatedAuthenticationService.cs" />
+    <Compile Include="Services\CaseDeletionService.cs" />
     <Compile Include="Services\CaseServiceAsync.cs" />
     <Compile Include="Services\CaseSolutions\BaseCaseSolutionService.cs" />
     <Compile Include="Services\Cache\TranslateCacheService.cs" />
@@ -363,6 +364,7 @@
     <Compile Include="Services\CaseStatistic\CaseStatisticService.cs" />
     <Compile Include="Services\Concrete\MetaDataService.cs" />
     <Compile Include="Services\FileViewLogService.cs" />
+    <Compile Include="Services\ICaseDeletionService.cs" />
     <Compile Include="Services\Mail2TicketService.cs" />
     <Compile Include="Services\UserEmailsSearchService.cs" />
     <Compile Include="Services\EmployeeService\Concrete\EmployeeService.cs" />
