--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -363,6 +363,7 @@
     <Compile Include="Models\FileViewLog\FileViewLogModel.cs" />
     <Compile Include="Models\FinishingCause\FinishingCauseItem.cs" />
     <Compile Include="Models\Gdpr\DataPrivacyParameters.cs" />
+    <Compile Include="Models\Gdpr\DataPrivacyResult.cs" />
     <Compile Include="Models\Gdpr\GdprFavoriteModel.cs" />
     <Compile Include="Models\Gdpr\GdprOperationsAuditOverview.cs" />
     <Compile Include="Models\Grid\CaseOverviewColumnDefinition.cs" />
