--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -12,9 +12,9 @@
 		<!--Dev-->
 		<!--<add name="GekasReceiptContext" connectionString="Data Source=DHUTVSQL5;Initial Catalog=GekasMockup;User Id=gekas;Password=gekas;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
 		<!--DHUTVSQL6-->
-		<add name="HelpdeskDb" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
+		<!--<add name="HelpdeskDb" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />-->
 
-		<!--<add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>-->
+		<add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
 		<add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
