Why cant I add this to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ dhHelpdeskMobile/.vs/
 /dhHelpdeskNG/UpgradeLog2.htm
 /dhHelpdeskNG/DH.Helpdesk.WebApi/Properties/PublishProfiles/FolderProfile1.pubxml
 dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
