--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -1362,6 +1362,15 @@
     <Content Include="Content\summernote-0.8.18\font\summernote.ttf" />
     <Content Include="Content\summernote-0.8.18\font\summernote.woff" />
     <Content Include="Content\summernote-0.8.18\font\summernote.woff2" />
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.min.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.min.js.LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\summernote-0.8.18\summernote-bs4.css" />
     <Content Include="Content\summernote-0.8.18\summernote-bs4.js" />
     <Content Include="Content\summernote-0.8.18\summernote-bs4.min.css" />
