--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -553,6 +553,9 @@
     <Content Include="Content\js\Shared\commonUtils.js" />
     <Content Include="Content\js\Shared\app.layout.js" />
     <Content Include="Content\js\typeahead.js" />
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.js" />
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.min.js" />
+    <Content Include="Content\summernote-0.8.18\lang\summernote-sv-SE.min.js.LICENSE.txt" />
     <Content Include="Content\summernote-0.8.18\summernote-bs4.css" />
     <Content Include="Content\summernote-0.8.18\summernote-bs4.js" />
     <Content Include="Content\summernote-0.8.18\summernote-bs4.min.css" />
