284606 - Standard texter not working in summernote

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config
@@ -21,8 +21,8 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="PreserveLoginUrl" value="true" />
 		<add key="dh_maskedpassword" value="||||||||"/>
-		<add key="dh_filesDirectory" value="#{FilesDirectory}"/>
-		<add key="dh_selfserviceaddress" value="#{SelfserviceAddress}"/>		
+		<add key="dh_filesDirectory" value="C:\websites-deploy\dev.helpdesk.files.internal.datahalland.se"/>
+		<add key="dh_selfserviceaddress" value="https://localhost:447/Selfservice/Case/Index/"/>	
 		<add key="Application.DefaultCulture" value="sv"/>
 		<add key="ClientValidationEnabled" value="true"/>
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
