--- a/dhHelpdeskNG/DH.HelpDesk.SpecFlow/DH.HelpDesk.SpecFlow.csproj
+++ b/dhHelpdeskNG/DH.HelpDesk.SpecFlow/DH.HelpDesk.SpecFlow.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+    <PackageReference Include="Selenium.Support" Version="4.7.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.7.0" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
@@ -20,6 +21,10 @@
   <ItemGroup>
     <Folder Include="Features\" />
     <Folder Include="Support\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dhHelpdesk_NG.Web\DH.Helpdesk.Web.csproj" />
   </ItemGroup>
 
 </Project>
